[tool.poetry]
name = "attack_surface_pypy"
version = "0.1.0"
description = ""
authors = ["crvs <ordinance_@list.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.1"
gunicorn = "^20.1.0"
structlog = "^21.5.0"
trio = "^0.19.0"
hypercorn = {extras = ["trio"], version = "^0.13.2"}
pydantic = {extras = ["dotenv"], version = "^1.9.0"}
trio-typing = "^0.7.0"
asyncstdlib = "^3.10.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.31.0"
mypy = "^0.931"
ipdb = "^0.13.9"
pytest-trio = "^0.7.0"
hypothesis = "^6.35.0"
locust = "^2.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
